Refactor CORS configuration; update logging levels to debug for sensitive operations, and enhance Docker Compose setup for backend and frontend services